syntax = "proto3";
package submodule;

// imports
import "proto/github.com/tendermint/go-amino/genproto/example/submodule2/types.proto";

// messages
message StructSM {
	int64 FieldA = 1;
	string FieldB = 2;
	submodule2.StructSM2 FieldC = 3;
}